basic-docker-secrets-no-swarm/src/main/java/example/errors/ResourceNotFoundException.java
package example.errors;

class ResourceNotFoundException extends ApplicationException {
	ResourceNotFoundException(int code, String message) {
		super(code, message);
	}
}
